# KinovaCompliance

./: CMakeLists.txt  data_current_torque.csv  data_gravity_horiontal.csv  data_gravity_vertical.csv  data_guidance_mode.csv  data_guidance_mode_x.csv  data_guidance_mode_y.csv  data_guidance_mode_z.csv  data_impedance_control_no_int.csv  main copy.cpp.bak  main.cpp  main.cpp.bak
include/KinovaClient/: kinova_client.hpp  specifications.hpp  utilities.h
include/KinovaControl/: controller.hpp  rate_counter.hpp  state.hpp
include/KinovaMobile/: kinova_mobile.hpp  kinova_mobile_utilities.hpp
include/KinovaPinocchioCasadi/: casadi_kin_dyn.h
src/KinovaClient/: kinova_client.cpp  specifications.cpp  utilities.cpp
src/KinovaControl/: controller.cpp  rate_counter.cpp  state.cpp
src/KinovaMobile/: kinova_mobile.cpp  kinova_mobile_utilities.cpp
src/KinovaPinocchioCasadi/: casadi_kin_dyn.cpp
